fix(incidents): MA-614 Fix responsible selector overflow style

--- a/incidents/src/main/resources/public/sass/global/components/incidents/_lightbox.scss
+++ b/incidents/src/main/resources/public/sass/global/components/incidents/_lightbox.scss
@@ -66,6 +66,13 @@
         width: $select-size;
       }
     }
+
+    &-responsible-autocomplete {
+      label {
+        overflow: inherit;
+      }
+    }
+
     &-descriptionTreated {
       &-content {
         margin-top: $spacing-XLXS;
